--- a/Code Files/lstm_stock_predictor_closing.ipynb
+++ b/Code Files/lstm_stock_predictor_closing.ipynb
@@ -786,7 +786,7 @@
    "source": [
     "Results :\n",
     "\n",
-    "The prediction of an increase of price level is consistent with the actual price movement based off the closing prices of the index (FNG), however the accuracy is not consistent with price history. \n",
+    "The prediction of an increase of price level is consistent with the actual price movement based off the closing prices of index (FNG), however the accuracy is not consistent with price history. \n",
     "    "
    ]
   }
